force-app/main/default/objects/WorkOrder/fields/Modelo_do_painel_fotovoltaico__c.field-meta.xml
<CustomField>
    <fullName>Modelo_do_painel_fotovoltaico__c</fullName>
    <label>Modelo do painel fotovoltaico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>