force-app/main/default/objects/WorkOrder/fields/Modulos_por_Strings_10__c.field-meta.xml
<CustomField>
    <fullName>Modulos_por_Strings_10__c</fullName>
    <label>Módulos por Strings 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>