force-app/main/default/objects/WorkOrder/fields/Modulos_por_Strings_11__c.field-meta.xml
<CustomField>
    <fullName>Modulos_por_Strings_11__c</fullName>
    <label>Módulos por Strings 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>