force-app/main/default/objects/WorkOrder/fields/ModulosEstaoAlinhados__c.field-meta.xml
<CustomField>
    <fullName>ModulosEstaoAlinhados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Módulos estão alinhados?&quot; sim ou não.</description>
    <label>Módulos estão alinhados?</label>
    <type>Checkbox</type>
</CustomField>