force-app/main/default/objects/WorkOrder/fields/ModulosInstaladosCorretamente__c.field-meta.xml
<CustomField>
    <fullName>ModulosInstaladosCorretamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Módulos estão instalados corretamente?&quot; sim ou não.</description>
    <label>Módulos estão instalados corretamente?</label>
    <type>Checkbox</type>
</CustomField>