force-app/main/default/objects/WorkOrder/fields/MonitoramentoFuncionando__c.field-meta.xml
<CustomField>
    <fullName>MonitoramentoFuncionando__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Monitoramento está funcionando?&quot; sim ou não.</description>
    <label>Monitoramento está funcionando?</label>
    <type>Checkbox</type>
</CustomField>