force-app/main/default/objects/WorkOrder/fields/MonitoramentoInstalado__c.field-meta.xml
<CustomField>
    <fullName>MonitoramentoInstalado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Monitoramento está instalado?&quot; sim ou não.</description>
    <label>Monitoramento está instalado?</label>
    <type>Checkbox</type>
</CustomField>