force-app/main/default/objects/WorkOrder/fields/Monofasico__c.field-meta.xml
<CustomField>
    <fullName>Monofasico__c</fullName>
    <description>Campo para descrever o valor de voltagem do disjuntor.</description>
    <label>Monofásico:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>127V</fullName>
            </value>
            <value>
                <fullName>220V</fullName>
            </value>
            <value>
                <fullName>MRT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>