force-app/main/default/objects/WorkOrder/fields/Montagem_de_Modulos__c.field-meta.xml
<CustomField>
    <fullName>Montagem_de_Modulos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Montagem de Módulos</label>
    <type>Checkbox</type>
</CustomField>