force-app/main/default/objects/WorkOrder/fields/Montagem_dos_Inversores__c.field-meta.xml
<CustomField>
    <fullName>Montagem_dos_Inversores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Montagem dos Inversores</label>
    <type>Checkbox</type>
</CustomField>