force-app/main/default/objects/WorkOrder/fields/Montagem_dos_Inversores_new__c.field-meta.xml
<CustomField>
    <fullName>Montagem_dos_Inversores_new__c</fullName>
    <label>Montagem dos Inversores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Não informado</fullName>
                <isActive>false</isActive>
                <label>Não informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>