force-app/main/default/objects/WorkOrder/fields/MuretaQuadroMedicaoPrumo__c.field-meta.xml
<CustomField>
    <fullName>MuretaQuadroMedicaoPrumo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Mureta do Quadro de Medição no prumo?&quot; sim ou não.</description>
    <label>Mureta do Quadro de Medição no prumo?</label>
    <type>Checkbox</type>
</CustomField>