force-app/main/default/objects/WorkOrder/fields/NivelQuedaSinalLocal__c.field-meta.xml
<CustomField>
    <fullName>NivelQuedaSinalLocal__c</fullName>
    <description>Campo para definir o nível de queda de sinal no local.</description>
    <label>Nível de queda de sinal no local:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>