force-app/main/default/objects/WorkOrder/fields/Nome_Equipe__c.field-meta.xml
<CustomField>
    <fullName>Nome_Equipe__c</fullName>
    <label>Nome:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>