force-app/main/default/objects/WorkOrder/fields/NomeCompletoResponsavel_UC__c.field-meta.xml
<CustomField>
    <fullName>NomeCompletoResponsavel_UC__c</fullName>
    <description>Campo para definir o nome completo do responsável pela UC.</description>
    <label>Nome completo do responsável pela UC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>