force-app/main/default/objects/WorkOrder/fields/NS2__c.field-meta.xml
<CustomField>
    <fullName>NS2__c</fullName>
    <description>Campo para definir NS da ordem de trabalho.</description>
    <label>NS:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>