force-app/main/default/objects/WorkOrder/fields/NS_da_antena__c.field-meta.xml
<CustomField>
    <fullName>NS_da_antena__c</fullName>
    <label>NS da antena</label>
    <length>255</length>
    <type>Text</type>
</CustomField>