force-app/main/default/objects/WorkOrder/fields/NS_do_inversor__c.field-meta.xml
<CustomField>
    <fullName>NS_do_inversor__c</fullName>
    <label>NS do inversor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>