force-app/main/default/objects/WorkOrder/fields/NUCGeradora__c.field-meta.xml
<CustomField>
    <fullName>NUCGeradora__c</fullName>
    <description>Campo para definir o  N° UC Geradora.</description>
    <label>N° UC Geradora</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>