force-app/main/default/objects/WorkOrder/fields/NUCsCadastradas__c.field-meta.xml
<CustomField>
    <fullName>NUCsCadastradas__c</fullName>
    <description>Campo para definir o  N° UC&apos;s Cadastradas.</description>
    <label>N° UC&apos;s Cadastradas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>