force-app/main/default/objects/WorkOrder/fields/NUCsNovas__c.field-meta.xml
<CustomField>
    <fullName>NUCsNovas__c</fullName>
    <description>Campo para definir o  N° UC&apos;s Novas.</description>
    <label>N° UC&apos;s Novas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>