force-app/main/default/objects/WorkOrder/fields/Numero_de_Serie_do_inversor__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Serie_do_inversor__c</fullName>
    <label>Numero de Série do inversor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>