force-app/main/default/objects/WorkOrder/fields/Numero_do_MPPT_11__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_MPPT_11__c</fullName>
    <label>Número do MPPT 11</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>