force-app/main/default/objects/WorkOrder/fields/NumeroFasesDJ__c.field-meta.xml
<CustomField>
    <fullName>NumeroFasesDJ__c</fullName>
    <description>Campo para descrever o numero de fases DJ (disjuntor).</description>
    <label>Numero de Fases DJ:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monofásico</fullName>
            </value>
            <value>
                <fullName>Bifásico</fullName>
            </value>
            <value>
                <fullName>Trifásico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>