force-app/main/default/objects/WorkOrder/fields/O_que_ocasiona_o_problema__c.field-meta.xml
<CustomField>
    <fullName>O_que_ocasiona_o_problema__c</fullName>
    <label>O que ocasiona o problema?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>