force-app/main/default/objects/WorkOrder/fields/OBS__c.field-meta.xml
<CustomField>
    <fullName>OBS__c</fullName>
    <description>Campo para observação auxiliar ao técnico da ficha de inspeção.</description>
    <formula>&quot; Mandar localização no whatsapp: (65) 99698 - 7669 e informar que é visita técnica junto com nome e sobrenome do cliente.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBS.:</label>
    <type>Text</type>
</CustomField>