force-app/main/default/objects/WorkOrder/fields/Observacoes2__c.field-meta.xml
<CustomField>
    <fullName>Observacoes2__c</fullName>
    <description>Campo para descrever uma observação importante para a ordem de trabalho.</description>
    <label>Observações:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>