force-app/main/default/objects/WorkOrder/fields/ObservacoesGeral__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesGeral__c</fullName>
    <description>Campo para descrição de alguma observação.</description>
    <label>Observações:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>