force-app/main/default/objects/WorkOrder/fields/OsModulosEstaoLimpos__c.field-meta.xml
<CustomField>
    <fullName>OsModulosEstaoLimpos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Os módulos estão limpos?&quot; sim ou não.</description>
    <label>Os módulos estão limpos?</label>
    <type>Checkbox</type>
</CustomField>