force-app/main/default/objects/WorkOrder/fields/OsModulosEstaoLivresSombreamento__c.field-meta.xml
<CustomField>
    <fullName>OsModulosEstaoLivresSombreamento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Os módulos estão livres do sombreamento?&quot; sim ou não.</description>
    <label>Os módulos estão livres do sombreamento?</label>
    <type>Checkbox</type>
</CustomField>