force-app/main/default/objects/WorkOrder/fields/OsModulosEstaoPerfeitoEtado__c.field-meta.xml
<CustomField>
    <fullName>OsModulosEstaoPerfeitoEtado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Os módulos estão em perfeito estado?&quot; sim ou não.</description>
    <label>Os módulos estão em perfeito estado?</label>
    <type>Checkbox</type>
</CustomField>