force-app/main/default/objects/WorkOrder/fields/Outro_Material__c.field-meta.xml
<CustomField>
    <fullName>Outro_Material__c</fullName>
    <label>Outro Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>