force-app/main/default/objects/WorkOrder/fields/Outro_Tipo_Telhado__c.field-meta.xml
<CustomField>
    <fullName>Outro_Tipo_Telhado__c</fullName>
    <label>Outro Tipo de Telhado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>