force-app/main/default/objects/WorkOrder/fields/para_bombeamento__c.field-meta.xml
<CustomField>
    <fullName>para_bombeamento__c</fullName>
    <label>É para bombeamento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>