force-app/main/default/objects/WorkOrder/fields/Pconsumo__c.field-meta.xml
<CustomField>
    <fullName>Pconsumo__c</fullName>
    <description>Campo para definir o % de consumo.</description>
    <label>% de consumo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>