force-app/main/default/objects/WorkOrder/fields/PilaresEstaoAlinhados__c.field-meta.xml
<CustomField>
    <fullName>PilaresEstaoAlinhados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Pilares estão alinhados?&quot; sim ou não.</description>
    <label>Pilares estão alinhados?</label>
    <type>Checkbox</type>
</CustomField>