force-app/main/default/objects/WorkOrder/fields/PlacaGPropriaInstalada__c.field-meta.xml
<CustomField>
    <fullName>PlacaGPropriaInstalada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Placa de G. Própria instalada?&quot; sim ou não.</description>
    <label>Placa de G. Própria instalada?</label>
    <type>Checkbox</type>
</CustomField>