force-app/main/default/objects/WorkOrder/fields/Platibandas__c.field-meta.xml
<CustomField>
    <fullName>Platibandas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se existe platibandas.</description>
    <label>Platibandas:</label>
    <type>Checkbox</type>
</CustomField>