force-app/main/default/objects/WorkOrder/fields/Potencia_do_modulo_Wp_10__c.field-meta.xml
<CustomField>
    <fullName>Potencia_do_modulo_Wp_10__c</fullName>
    <label>Potência do módulo (Wp) 10</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>