force-app/main/default/objects/WorkOrder/fields/PranchasProjetosImpressasLocal__c.field-meta.xml
<CustomField>
    <fullName>PranchasProjetosImpressasLocal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Pranchas e projetos impressas no local ?&quot; sim ou não.</description>
    <label>Pranchas e projetos impressas no local ?</label>
    <type>Checkbox</type>
</CustomField>