force-app/main/default/objects/WorkOrder/fields/PrintgeracaoInversor03__c.field-meta.xml
<CustomField>
    <fullName>PrintgeracaoInversor03__c</fullName>
    <description>Campo para auxiliar o técnico sobre quais imagens ele deve adicionar em arquivos, relatório de geração.</description>
    <formula>&quot; Prints da geração do mês atual, &quot; &amp; 
&quot; prints da geração do 1° mês anterior, &quot; &amp; 
&quot; prints da geração do 2° mês anterior e &quot; &amp; 
&quot; print da geração do ano. &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print da geração - Inversor 03</label>
    <type>Text</type>
</CustomField>