force-app/main/default/objects/WorkOrder/fields/Projeto__c.field-meta.xml
<CustomField>
    <fullName>Projeto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar a ordem de serviço com projetos.</description>
    <label>Projeto</label>
    <referenceTo>Projeto__c</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>