force-app/main/default/objects/WorkOrder/fields/QuadrosComAdesivosRiscoChoque__c.field-meta.xml
<CustomField>
    <fullName>QuadrosComAdesivosRiscoChoque__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Quadros com adesivos de risco de choque?&quot; sim ou não.</description>
    <label>Quadros com adesivos de risco de choque?</label>
    <type>Checkbox</type>
</CustomField>