force-app/main/default/objects/WorkOrder/fields/QualMonitoramentoInstalado__c.field-meta.xml
<CustomField>
    <fullName>QualMonitoramentoInstalado__c</fullName>
    <description>Campo para definir  &quot;Qual monitoramento instalado&quot;.</description>
    <label>Qual monitoramento instalado?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>