force-app/main/default/objects/WorkOrder/fields/Quantidade_de_modulos_a_serem_retirados3__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_modulos_a_serem_retirados3__c</fullName>
    <label>Quantidade de módulos a serem retirados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>