force-app/main/default/objects/WorkOrder/fields/Quantidade_de_MPPTs_connectados__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_MPPTs_connectados__c</fullName>
    <label>Quantidade de MPPTs connectados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>