force-app/main/default/objects/WorkOrder/fields/Quantidade_de_pain_is_por_MPPT__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_pain_is_por_MPPT__c</fullName>
    <label>Quantidade de painéis por MPPT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>