force-app/main/default/objects/WorkOrder/fields/QuantidadeAguas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAguas__c</fullName>
    <description>Campo para definir a quantidade de águas.</description>
    <label>Quantidade de águas:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>