force-app/main/default/objects/WorkOrder/fields/QuantidadeMdulosExistente3__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMdulosExistente3__c</fullName>
    <description>Campo para definir a quantidade de módulos existente.</description>
    <label>Quantidade de módulos existente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>