force-app/main/default/objects/WorkOrder/fields/QuantidadeMdulosSeremInstalados1__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMdulosSeremInstalados1__c</fullName>
    <description>Campo para definir a quantidade de módulos a serem instalados.</description>
    <label>Quantidade de módulos a serem instalados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>