force-app/main/default/objects/WorkOrder/fields/QuantidadeModulos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeModulos__c</fullName>
    <description>Campo para definir a Quantidade de módulos.</description>
    <label>Quantidade de módulos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>