force-app/main/default/objects/WorkOrder/fields/QuemVaiDefinirConsumo__c.field-meta.xml
<CustomField>
    <fullName>QuemVaiDefinirConsumo__c</fullName>
    <description>Campo para determinar quem vai definir a % de consumo.</description>
    <label>Quem vai definir a % de consumo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Enerzee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>