force-app/main/default/objects/WorkOrder/fields/RamalEntrada__c.field-meta.xml
<CustomField>
    <fullName>RamalEntrada__c</fullName>
    <description>Campo para definir o tipo de ramal de entrada.</description>
    <label>Ramal de entrada:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subterrâneo</fullName>
            </value>
            <value>
                <fullName>Aéreo</fullName>
            </value>
            <value>
                <fullName>CP-Rede</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>