force-app/main/default/objects/WorkOrder/fields/Relatorio_de_Conclusao_de_Obra__c.field-meta.xml
<CustomField>
    <fullName>Relatorio_de_Conclusao_de_Obra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relatório de Conclusão de Obra</label>
    <type>Checkbox</type>
</CustomField>