force-app/main/default/objects/WorkOrder/fields/Relatorio_de_Conclusao_de_Obra_new__c.field-meta.xml
<CustomField>
    <fullName>Relatorio_de_Conclusao_de_Obra_new__c</fullName>
    <label>Relatório de Conclusão de Obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Não informado</fullName>
                <isActive>false</isActive>
                <label>Não informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>