force-app/main/default/objects/WorkOrder/fields/ReleProtecaoInstaladoCitarModelo__c.field-meta.xml
<CustomField>
    <fullName>ReleProtecaoInstaladoCitarModelo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Relé de Proteção instalado? Citar modelo&quot; sim ou não.</description>
    <label>Relé de Proteção instalado? Citar modelo</label>
    <type>Checkbox</type>
</CustomField>