force-app/main/default/objects/WorkOrder/fields/SecaoAbrigoInversores__c.field-meta.xml
<CustomField>
    <fullName>SecaoAbrigoInversores__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot; Abrigo dos inversores&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seção:</label>
    <type>Text</type>
</CustomField>