force-app/main/default/objects/WorkOrder/fields/SecaoCabeamentoCAeCCligacoesCA__c.field-meta.xml
<CustomField>
    <fullName>SecaoCabeamentoCAeCCligacoesCA__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot; Cabeamento CA e CC / Ligações CA e CC&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seção:</label>
    <type>Text</type>
</CustomField>